adding nav links

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
 <body>
 
     {% block content %}
+    
+    <nav>
+        <a href="/blog/">Main BLog Page</a>
+    </nav>
     {% endblock %}
 
 </body>
