created error messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,22 @@
 <!doctype html>
 <html>
     <head>
+        <style>
+            span.navigationSpace {
+            padding-left: 30px;
+        }
+        </style>
+        <nav>
+            <a href="/blog">Main Blog Page</a>
+            <span class="navigationSpace"></span>
+            <a href="/newpost">Add a Blog Entry</a>
+        </nav>
         <title>{{title}}</title>
     </head>
 <body>
 
     {% block content %}
     
-    <nav>
-        <a href="/blog/">Main BLog Page</a>
-    </nav>
     {% endblock %}
 
 </body>
