--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,15 +8,11 @@
     <h1>Build a Blog</h1>
 </div>
 
-    <ul>
-        {% for blog in blogs %}
-        <li>{{blog.name}}
-            <form action="/blog" method="POST">
-                <input type="hidden" name="blog-id" value="{{blog.id}}" />
-                
-            </form>
-        </li>
-        {% endfor %}
-    </ul>
+
+<ul>
+    {% for blog in blogs %}
+    <li>{{blog.name}}</li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
