--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,7 +11,22 @@
 
 <ul>
     {% for blog in blogs %}
-    <li>{{blog.name}}</li>
+        <li>{{blog.name}}
+            <form method="POST" action="/blog" name="blog">
+                <input type="hidden" name="blog-id" value="{{blog.id}}"/>
+                <input type="submit" value="Done!"/>
+            </form>
+        </li>
+        {% endfor %}
+    </ul>
+    
+
+<hr />
+
+
+<ul>
+    {% for blog in blogs %}
+        <li>{{blog.name}}</li>
     {% endfor %}
 </ul>
 
