--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -12,26 +12,22 @@
     <h1>Add a Blog Entry</h1>
 </div>
 
-    <form action="/newpost">
+    <form action='/newpost' method="POST">
         <label>
             Title for your new blog:
-            <input style="width: 210px;" type="text" name='title' />
+            <input style="width: 210px;" type="text" name="title" />
             <p class="error">{{title_error}}</p>
         </label>
 
         <div class="b">             
         <label>
             Your new blog:
-            <input style="width: 250px; height: 170px;" type="text" name='body' />
+            <input style="width: 250px; height: 170px;" type="text" name="body" />
             <p class="error">{{body_error}}</p>
         </label>
         </div>
         <input type="submit" value='Add Entry' />
     </form>
 
-{% if error %}
-    <p class='error'>{{ title_error }}</p> 
-    <p class='error'>{{ body_error }}</p> 
-{% endif %}
 
 {% endblock %}
