--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -12,10 +12,10 @@
     <h1>Add a Blog Entry</h1>
 </div>
 
-    <form action='/newpost' method="POST">
+    <form method="POST">
         <label>
             Title for your new blog:
-            <input style="width: 210px;" type="text" name="title" />
+            <input style="width: 210px;" type="text" name='title' />
             <p class="error">{{title_error}}</p>
         </label>
 
