--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,6 +8,10 @@
     <h1>Build a Blog</h1>
 </div>
 
-
-
+<ul>
+    {% for newpost in newposts %}
+        <li>{{title}}</li>
+        <li>{{body}}</li>
+    {% endfor %}
+</ul>
 {% endblock %}
