--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -12,7 +12,7 @@
     <h1>Add a Blog Entry</h1>
 </div>
 
-    <form action='/newpost'>
+    <form action='/newpost' name="newpost">
         <label>
             Title for your new blog:
             <input style="width: 210px;" type="text" name="title"/>
@@ -26,7 +26,10 @@
             <p class="error">{{body_error}}</p>
         </label>
         </div>
+        
+    
         <input type="submit" name="Add-Entry"/>
+      
     </form>
 
    
