--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,10 +8,12 @@
     <h1>Build a Blog</h1>
 </div>
 
+{% if newposts|length >= 1 %}
 <ul>
     {% for newpost in newposts %}
     <li>{{newpost}}</li>
     {% endfor %}
 </ul>
+{% endif %}
 
 {% endblock %}
