--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -12,25 +12,24 @@
     <h1>Add a Blog Entry</h1>
 </div>
 
-    <form name="newpost" method="POST">
-        <label>
-            Title for your new blog:
-            <input name="title" style="width: 210px;" type="text"/>
-            
-        </label>
+<form method="POST">
+    <label>
+        Title for your new blog:
+        <input name="title" style="width: 210px;" type="text"/>
+    </label>
 
-        <div class="b">             
-        <label>
-            Your new blog:
-            <input name="body" style="width: 250px; height: 170px;" type="text"/>
-            
-        </label>
-        </div>
+<div class="b"> 
+    <label>
+        Your new blog:
+        <input name="body" style="width: 250px; height: 170px;" type="text"/>
+    </label>
+</div>
         
-    
-        <input type="submit" name="Add-Entry"/>
-      
-    </form>
+<input type="submit" name="Add-Entry"/>
+
+</form>     
+
+
 <ul>
     {% for newpost in newposts %}
     <li>{{newpost}}</li>
