--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -11,11 +11,11 @@
     <h1>Add a Blog Entry</h1>
 </div>
 
-<form method="POST">
+<form name="newpost" method="POST">
     <label>
         Title for your new blog:
         <input name="title" style="width: 210px;" type="text"/>
-    </label>
+    </label><br><br><br><br>
 
 <div class="b"> 
     <label>
