--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -5,6 +5,7 @@
 <style>
     div.a { text-align: center;}
     div.b { width: 200px; height: 200px;}
+    .error { color: red;}
 </style> 
 
 <div class="a"> 
@@ -15,12 +16,14 @@
     <label>
         Title for your new blog:
         <input name="title" style="width: 210px;" type="text"/>
+        <p class="error">{{ error }}</p>
     </label><br><br><br><br>
 
 <div class="b"> 
     <label>
         Your new blog:
         <input name="body" style="width: 250px; height: 170px;" type="text"/>
+        <p class="error">{{ error }}</p>
     </label>
 </div>
         
