--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,7 +10,7 @@
 
 <ul>
     {% for blog in blogs %}   
-    <h2>{{ blog.title }}</h2>
+    <h2><a href="./post?id=posts">{{ blog.title }}</a></h2>
     <p>{{ blog.body }}</p>
     {% endfor %}    
 </ul>                     
