--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -15,7 +15,7 @@
 <form name="newpost" method="POST">
     <label>
         Title for your new blog:
-        <a href="./blog?id=6"><input name="title" style="width: 210px;" type="text"/></a>
+        <input name="title" style="width: 210px;" type="text"/>
         
     </label><br><br>
 
