--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-
+{% block content %}
 <ul>
-    {% for blog in blogs %}   
+    {% for post in posts %}   
     <h2>{{ blog.title }}</h2>
     <p>{{ blog.body }}</p>
     {% endfor %}    
 </ul>              
 
+{% endblock %}
