--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <ul>
-    {% for post in posts %}   
+    {% for blog in blogs %}   
     <h2>{{ blog.title }}</h2>
     <p>{{ blog.body }}</p>
     {% endfor %}    
