--- a/templates/post.html
+++ b/templates/post.html
@@ -1,14 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <ul>
-    {% for blog in blogs %}
-    <li>
-        <h1>{{ blog.title }}</h1>
-        <p>{{blog.body }}</p>
-        <form action="/post" method="POST">
-            <input type="hidden" name="blog-id" value="{{ blog.id }}"/>
-        </form>
-    </li>
+    {% for blog in submitted_blogs %}
+    
+    <h1>{{ blog.title }}</h1>
+    <p>{{blog.body }}</p>
+        
     {% endfor %}
 </ul>
 
