--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -4,7 +4,6 @@
 
 <style>
     div.a { text-align: center;}
-    div.b { width: 200px; height: 200px;}
     .error { color: red;}
 </style> 
 
@@ -18,14 +17,13 @@
         <input name="title" style="width: 210px;" type="text"/>
         
     </label><br><br>
-
-<div class="b"> 
+ 
     <label>
         Your new blog:
-        <input name="body" style="width: 250px; height: 170px;" type="text"/>
+        <textarea name="body" type="textarea"></textarea>
        
     </label>
-</div>
+
 <br><br><br>        
 <input type="submit" name="Add-Entry"/>
 
