--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,12 +5,11 @@
     div.a { text-align: center;}
 </style> 
 <div class="a">
-    <h1>Build a Blog</h1>
+    <h1>Build a Blog</h1> 
 </div>
-
 <ul>
     {% for blog in blogs %}   
-    <h2><a href="./post?id=">{{ blog.title }}</a></h2>
+    <h2><a href="/post?id={{blog.id}}">{{ blog.title }}</a></h2>
     <p>{{ blog.body }}</p>
     {% endfor %}    
 </ul>                     
