--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+<style>
+    div.a { text-align: center;}
+</style> 
 <ul>
     {% for blog in submitted_blogs %}
-    
+
     <h1>{{ blog.title }}</h1>
+
     <p>{{blog.body }}</p>
         
     {% endfor %}
