--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,13 +5,19 @@
     div.a { text-align: center;}
 </style> 
 <div class="a">
-    <h1>Build a Blog</h1> 
+    <h1>Blogz</h1> 
 </div>
 <ul>
     {% for blog in blogs %}   
     <h2><a href="/post?id={{blog.id}}">{{ blog.title }}</a></h2>
     <p>{{ blog.body }}</p>
-    {% endfor %}    
+        {% for user in users %}
+            {% if user.id == blog.owner_id %}
+            written by
+            <a href="/blog?id={{user.id}}">{{user.username}}</a> 
+            {% endif %}  
+        {% endfor %} 
+    {% endfor %}   
 </ul>                     
 
 
