--- a/templates/post.html
+++ b/templates/post.html
@@ -7,8 +7,9 @@
     {% for blog in submitted_blogs %}
 
     <h1>{{ blog.title }}</h1>
-
-    <p>{{blog.body }}</p>
+    <p>{{ blog.body }}</p>
+    written by
+    <a href="/user?user={{blog.owner_id}}">{{blog.username}}</a>
         
     {% endfor %}
 </ul>
