--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 </style> 
 <ul>
     {% for user in users %}
-    <li><a href="/user?id={{user.id}}">{{user.username}}</a></li>
+    <li><a href="/blog?id={{user.id}}">{{user.username}}</a></li>
         
     {% endfor %}
 </ul>
