--- a/templates/post.html
+++ b/templates/post.html
@@ -8,9 +8,12 @@
 
     <h1>{{ blog.title }}</h1>
     <p>{{ blog.body }}</p>
-    written by
-    <a href="/user?user={{blog.owner_id}}">{{blog.username}}</a>
-        
+        {% for user in users %}
+            {% if user.id == blog.owner_id %}
+            written by
+            <a href="/blog?id={{user.id}}">{{user.username}}</a> 
+            {% endif %}  
+        {% endfor %} 
     {% endfor %}
 </ul>
 
