--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,9 +14,9 @@
         {% for user in users %}
             {% if user.id == blog.owner_id %}
             written by
-            <a href="/blog?id={{user.id}}">{{user.username}}</a> 
+            <a href="/user?user={{user.username}}">{{user.username}}</a> 
             {% endif %}  
-        {% endfor %} 
+        {% endfor %}
     {% endfor %}   
 </ul>                     
 
