--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Log into Blogz</h1>
-<p>If you don't have an account, you may <a href="/signup">Create Account</a> for one</p>
+<p>If you don't have an account, you may <a href="/signup">Create Account</a></p>
 <form action="/login" method="post">
     <table>
         <tr>
