--- a/templates/user.html
+++ b/templates/user.html
@@ -2,13 +2,16 @@
 {% block content %}
 
 <ul>
-    {% for blog in blogs %}
-
-    <h2><a href="/post?id={{blog.id}}">{{ blog.title }}</a></h2>
-    <p>{{ blog.body }}</p>
-    written by
-    <a href="/user?id={{blog.owner_id}}">{{user.username}}</a>    
-    {% endfor %}
-</ul>
+    {% for blog in submitted_blogs %}   
+        <h2><a href="/post?id={{blog.id}}">{{ blog.title }}</a></h2>
+        <p>{{ blog.body }}</p>
+        {% for user in users  %}
+            {% if user.id == blog.owner_id %}
+            written by
+            <a href="/user?user={{user.username}}">{{user.username}}</a> 
+            {% endif %}  
+        {% endfor %} 
+    {% endfor %}   
+</ul>                     
 
 {% endblock %}
