--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,14 @@
 {% block content %}
 <style>
     div.a { text-align: center;}
-</style> 
+</style>
+<div class="a">
+    <h1>Blogz Users</h1> 
 <ul>
     {% for user in users %}
-    <li><a href="/user?user={{user.username}}">{{user.username}}</a></li>
+    <li><a href="/blog?user={{user.username}}">{{user.username}}</a></li>
         
     {% endfor %}
 </ul>
-
+</div>
 {% endblock %}
